# python-logging-discord-handler

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
discord_logging/: examples.py  handler.py
docs/source/: conf.py  index.rst
docs/source/_autosummary/: discord_logging.handler.DEFAULT_COLOURS.rst  discord_logging.handler.DEFAULT_EMOJIS.rst  discord_logging.handler.DiscordHandler.rst  discord_logging.handler.rst
docs/source/_templates/: custom-class-template.rst
tests/: test_smoke.py
